# pdxcrime

./: .flake8  .gitignore  Makefile  README.md  pdxcrime.ipynb  pyproject.toml
.github/workflows/: python-app.yml
src/pdxcrime/: __init__.py  __main__.py
src/pdxcrime/data/bar/crime/: 2015.parquet  2016.parquet  2017.parquet  2018.parquet  2019.parquet  2020.parquet  2021.parquet  __init__.py
src/pdxcrime/data/bar/real-estate/: 2015.parquet  2016.parquet  2019.parquet  2020.parquet  2021.parquet
src/pdxcrime/data/bar/real_estate/: 2015.parquet  2016.parquet  2017.parquet  2018.parquet  2019.parquet  2020.parquet  2021.parquet  __init__.py  pdx_real_estate_2015_2022.csv
src/pdxcrime/data/lake/: Neighborhoods.csv
src/pdxcrime/data/lake/crime/: __init__.py
src/pdxcrime/data/lake/neighborhoods/: __init__.py
src/pdxcrime/data/lake/real_estate/: 2015.csv  2016.csv  2017.csv  2018.csv  2019.csv  2020.csv  2021.csv  __init__.py
test/: __init__.py  test_data_bar.py  test_data_lake.py  test_main.py
