
[tool.poetry]
name = "pdxcrime"
packages = [
    { include = "src/pdxcrime" },
]
version = "0.0.1"
description = "A repository for pdx crime and real estate data."
authors = ["noemail"]
license = "MIT"
readme = "README.md"
homepage = "project home page (used in pyproject.toml)"
repository = "https://github.com/lhayhurst/pdxcrime/"
keywords = [
    "Poetry",
    "Virtual Environments",
    "Nox",
    "Python",
    "black",
    "flake8",
    "mypy",
    "pytest",
    "safety",
    "data science"
]
[tool.poetry.dependencies]
python = "^3.7.1,<3.11"
flake8-import-order = "^0.18.1"
numpy = "^1.21.2"
matplotlib = "^3.4.3"
pandas = "^1.3.3"
click = "^8.0.1"


[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.9.0"
mypy = "^0.812"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
coverage = {extras = ["toml"], version = "^5.5"}
nox-poetry = "^0.8.4"
flake8-black = "^0.2.1"
flake8-bugbear = "^21.3.2"
flake8-bandit = "^2.1.2"
safety = "^1.10.3"
flake8-annotations = "^2.6.1"

[tool.black]
line-length = 103
exclude = '''
(
  \.git
  | \.idea
  | \.mypy_cache
  | \.pytest_cache
  | envs
)
'''

[tool.pytest.ini_options]
testpaths = [
    "test",
]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["pdxcrime"]

[tool.coverage.report]
show_missing = true
fail_under = 100
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

